--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <nav id="navbar"></nav>
+<section id="welcome-section">
+  <h1>Hey I am Mimic</h1>
+</section>
+<section id="projects">
+  <div class="project-tile"></div>
+  <a href="#projects">Project</a>
+</section>
 
-    <!--
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    Hello world
     <script  src="js/index.js"></script>
   </body>
 </html>
