--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <nav id="navbar"></nav>
+    <nav id="navbar">
+      
+        <li><a href="#welcome-section">Welcome</a></li>
+        <li><a href="#projects">Projects</a></li>
+        
+    </nav>
 <section id="welcome-section">
   <h1>Hey I am Mimic</h1>
 </section>
@@ -16,6 +22,7 @@
   <div class="project-tile"></div>
   <a href="#projects">Project</a>
 </section>
+<a href="https://github.com/" id="profile-link" target="_blank">github</a>
 
 
     <script  src="js/index.js"></script>
